--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "react-scroll": "^1.8.9",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://shubham-pawar9.github.io/my-portfolio/",
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
