--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scroll": "^1.8.9",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://shubham-pawar9.github.io/my-portfolio/",
+  "homepage": "https://shubham-pawar9.github.io/my-portfolio",
 
   "scripts": {
     "start": "react-scripts start",
